# invi

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/invi/: __init__.py  dicts.py  misc.py  units.py
src/invi/agama/: __init__.py  aaf.py  distribution_function.py  orbit.py  potential.py
src/invi/astro_limepy/: __init__.py  limepy.py  sample.py  utils.py
src/invi/coordinates/: __init__.py  _coordinates.py  _spheroidal.py  plot.py  rotation.py
src/invi/coordinates/c/: fnc.c  master.c
src/invi/coordinates/c/frame/: FSR_dex_car_to_ICRS_esf.c  ICRS_esf_to_FSR_dex_car.c  frame_fnc.c
src/invi/cross_match/: __init__.py  _core.py
src/invi/data/: __init__.py  _misc.py  gaia.py  globular_cluster.py
src/invi/galpy/: __init__.py  aaf.py  orbit.py  potential.py
src/invi/globular_cluster/: __init__.py  mass_function.py  orbit.py  phase_space.py  synthetic_population.py
src/invi/inverse/: __init__.py  _core.py  _log.py  _optimisation.py
src/invi/mock/: __init__.py  _core.py
src/invi/naif/: __init__.py  _base_funcs.py  _spec.py
src/invi/notebook/: __init__.py  age_estimate.py  angle_action.py  cm_distance_estimate.py  globular_cluster.py  main_component.py  mock.py  orbit.py  petar.py  potential_estimation.py  radial_velocities.py  radial_velocities_desi.py  selection.py  stars.py  stream_simulation.py
src/invi/petar/: __init__.py  configuration_files.py  load.py  utils.py
src/invi/petar/script/: compress.py  extime.py
src/invi/photometry/: __init__.py  magnitudes.py  reddening.py
src/invi/plot/: __init__.py  _core.py
src/invi/selection/: __init__.py  _core.py  desi.py  master.c
src/invi/selection/fnc/: core.c  data.c  gaussian.c  test.c
src/invi/stars/: __init__.py  _photometry.py  cm_estimate.py  components.py  orbit_estimate.py
src/invi/stream/: __init__.py  age_estimation.py  principal_axes.py
src/invi/stream/simulation/: __init__.py  _core.py  _model_1.py  _model_2.py  _model_3.py  _model_4.py  _model_5.py
tests/: tests.py  tests_asdf.py  tests_data.py  tests_petar.py
