[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invi"
version = "3.0.0"

requires-python = ">= 3.11.2"
dependencies = ["numpy==2.2.0", #Numerical differences when using Galpy and TorusMapper
                "cvxopt", #Required by Agama
                "asdf",
                "dustmaps",
                "gaiadr3-zeropoint",
                "pandas",
                "shapely",
                "gaiaunlimited",
                "scikit-learn",
                "pygaia",
                "mpl_point_clicker",
                "tqdm",
                "joblib",
                "termcolor",
                "six", #Required by dustmaps
                ]

authors = [{name="Carles Garcia Palau", email="cgpalau@sjtu.edu.cn"}]

description = "Inverse Time Integration Method (invi)"

readme = "README.md"

license = {file = "LICENSE.txt"}

keywords = ["astrophysics", "galactic dynamics"]

classifiers = ["Intended Audience :: Science/Research",
               "Topic :: Scientific/Engineering :: Astronomy",
               "Topic :: Scientific/Engineering :: Physics",
               "License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3.13",
               "Operating System :: POSIX :: Linux"]
